namespaces/live.cloud-platform.service.justice.gov.uk/kiril-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "kiril-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "kiril-test"
    cloud-platform.justice.gov.uk/application: "kirils app"
    cloud-platform.justice.gov.uk/owner: "kiril kolev: kiril.kolev@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cpeapp"
    cloud-platform.justice.gov.uk/team-name: "kirils-team"
    cloud-platform.justice.gov.uk/review-after: "2025-01-03"
